posts redirect to external URL, add navbar and styling to index page.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,8 @@
 
 <% @posts.each do |post| %>
 
-  <%= link_to post.title, post_path(post) %>
+  <ul>
+    <li><%= link_to post.title, post_path(post) %></li>
+  </ul>
 
 <% end %>
