add delete and edit functions to individual post.

--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,1 +1,8 @@
-whatever
+<% if object.errors.any? %>
+  <h3>Oops! Please fix these errors:</h3>
+  <ul>
+    <% object.errors.full_messages.each do |message| %>
+      <li><%= messages %></li>
+    <% end %>
+  </ul>
+<% end %>
