Adds some styling and button to main page as well as adding new post to nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,14 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#">Hackers News</a>
+      <a class="navbar-brand" href="/posts">Hackers News</a>
+
     </div>
 
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+        <li><%= link_to "Add post", new_post_path %></li>
+
       </ul>
           </div>
     </div>
