allow user to comment on a post, comment correctly display on the comments page.

--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -2,7 +2,7 @@
   <h3>Oops! Please fix these errors:</h3>
   <ul>
     <% object.errors.full_messages.each do |message| %>
-      <li><%= messages %></li>
+      <li><%= message %></li>
     <% end %>
   </ul>
 <% end %>
