--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,11 +1,19 @@
 <%= @post.title %>
 
 
-<% if @comments.any? %>
+<% if @post.comments.any? %>
 
-<%= @comments.body %>
+<% @post.comments.each do |comment| %>
+<li>
+  <%= comment.body %>, <%= comment.author %>
+</li>
+
+  <% end %>
 
 
 <% else %>
   <p>Please add the first comment!</p>
 <% end %>
+
+
+<%= link_to "Add Comment", new_post_comment_path %>
