--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,16 @@
 <%= render "layouts/errors", :object => @comment %>
 
 <%= form_for [@post, @comment] do |f| %>
-  <%= f.label :author %>
+  <%= f.label :author %>:
+  <br>
   <%= f.text_field :author %>
-  <%= f.label :body %>
-  <%= f.text_field :body %>
-  <%= f.submit %>
+  <br>
+  <%= f.label :body %>:
+  <br>
+  <%= f.text_area(:body, rows: 5, cols: 40, placeholder: "hold this spot...") %>
+  <br>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+
 <% end %>
