--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,15 @@
 <% @posts.each do |post| %>
 
   <ul>
-    <li><%= link_to post.title, post_path(post) %> <div><%= link_to "Comments", post_comments_path(post.id) %> | <%= link_to "Edit", edit_post_path(post.id) %>  |  <%= link_to "Delete", post_path(post.id), :data => {:confirm => "are you really really sure?", :method => "delete"} %></div></li>
+    <li><%= link_to post.title, post_path(post) %>
+
+         <div class="below-post">
+         <%= link_to "Comments", post_comments_path(post.id) %> |
+         <%= link_to "Edit", edit_post_path(post.id) %>  |
+         <%= link_to "Delete", post_path(post.id), :data => {:confirm => "are you really really sure?", :method => "delete"} %>
+        </div>
+
+    </li>
   </ul>
 
 <% end %>
